ingress/argo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"    
    nginx.ingress.kubernetes.io/ssl-passthrough: "false" 
spec:
  rules:
  - http:
      paths:
      - path: /argo
        backend:
           serviceName: app-argocd-server
           servicePort: 80
