ingress/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host: jenkins.local
    http:
      paths:
      - path: /jenkins
        backend: 
           serviceName: jenkins
           servicePort: 8080
